fixes from designer (#153)
* fixes from designer

* removal of announcement bar

* more padding

* flex changes

* changes for mobile bottom cutoff

* added padding

* combo fixes

* font size adjustments

--- a/src/components/NewHomePage/EmailSignup/EmailSignup.css
+++ b/src/components/NewHomePage/EmailSignup/EmailSignup.css
@@ -1,3 +1,7 @@
+.email-signup {
+  flex: 1
+}
+
 .email-signup-form {
   display: flex;
   justify-content: flex-start;
@@ -42,5 +46,9 @@
 @media screen and (max-width: 768px) {
   .email-input, .thank-you-message {
     width: 100%;
+  }
+
+  .email-signup-header {
+    font-size: 20px;
   }
 }
