--- a/src/components/NewHomePage/ScrollingTokens/ScrollingTokens.css
+++ b/src/components/NewHomePage/ScrollingTokens/ScrollingTokens.css
@@ -1,6 +1,7 @@
 .scrolling-tokens-container {
   width: 100%;
   overflow: hidden;
+  padding-bottom: 60px;
 }
 
 .scrolling-tokens {
