--- a/src/components/NewHomePage/TitlePage/TitlePage.css
+++ b/src/components/NewHomePage/TitlePage/TitlePage.css
@@ -2,8 +2,8 @@
   position: relative;
   background-color: #F3F3F3;
   display: flex;
-  height: calc(100vh - 83px);
-  min-height: 700px;
+  height: calc(100vh - var(--ifm-navbar-height));
+  min-height: 860px;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -42,7 +42,6 @@
   flex-direction: column;
   display: flex;
   align-items: flex-start;
-  gap: 20px;
   margin-left: 80px;
   padding-right: 80px;
 }
@@ -53,25 +52,26 @@
   font-weight: 500;
   color: #4E14D0;
   line-height: 100%;
-  margin-bottom: 40px;
 }
 
 .subtitles {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 6px;
   font-family: Inter;
   font-size: 24px;
   font-weight: 500;
-  margin-bottom: 46px;
+  justify-content: center;
   line-height: 120%;
   color: #4E14D0;
+  padding: 30px 0px;
 }
 
 .subtitle-with-icon {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 6px;
 }
 
 .app-screenshot {
@@ -122,26 +122,19 @@
   } 
 
   .title {
-    font-size: 92px;
-  }
-}
-
-@media screen and (max-width: 1024px) { 
-  .title-page {
-    height: calc(100vh - 116px);
+    font-size: 80px;
   }
 }
 
 @media screen and (max-width: 815px) { 
   .title {
-    font-size: 86px;
+    font-size: 80px;
   }
 }
 
 @media screen and (max-width: 767px) { 
   .title-page {
-    height: calc(100vh - 91px);
-    min-height: 500px;
+    min-height: 800px;
   }
 
   .title-page-info {
@@ -171,13 +164,18 @@
 
 @media screen and (max-width: 510px) { 
   .title {
-    font-size: 60px;
+    font-size: 64px;
   }
 }
 
-@media screen and (max-width: 405px) { 
+@media screen and (max-width: 405px) {
+  .title-page-info {
+    padding: 0px;
+    gap: 0px;
+  } 
+
   .title {
-    font-size: 44px;
+    font-size: 52px;
   } 
 
   .join-button-text {
